--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,22 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "assets"
-              }
+                },
+                {
+                "glob": "**/*.svg",
+                "input": "node_modules/ionicons/dist/ionicons/svg",
+                "output": "./svg"
+                },
+                {
+                "glob": "manifest.webmanifest",
+                "input": "public",
+                "output": "./"
+                },
+                {
+                "glob": "**/*",
+                "input": "public/icons",
+                "output": "./icons"
+                }
             ],
             "styles": ["src/global.scss", "src/theme/variables.scss"],
             "scripts": [],
@@ -59,7 +74,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "serviceWorker": "ngsw-config.json"
             },
             "development": {
               "optimization": false,
